# Hackhathon-2-phase1-Todo-app

./: .gitignore  README.md  pyproject.toml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
history/prompts/1-advanced-todo-features/: 3-specification-creation.spec.prompt.md  4-implementation-plan.plan.prompt.md  5-task-generation.tasks.prompt.md  6-clarification-session.clarify.prompt.md  7-implementation-complete.impl.prompt.md
history/prompts/1-todo-app-enhanced/: 1-create-spec.spec.prompt.md  2-create-plan.plan.prompt.md  3-create-tasks.tasks.prompt.md  4-clarify-implementation.clarify.prompt.md
history/prompts/constitution/: 1-create-hackathon-todo-app-constitution.constitution.prompt.md  1-update-constitution.constitution.prompt.md  2-update-constitution.constitution.prompt.md
history/prompts/general/: 1-implementation-completion.general.prompt.md
history/prompts/todo-app/: 2-create-todo-app-spec.spec.prompt.md  3-create-todo-app-plan.plan.prompt.md  4-create-todo-app-tasks.tasks.prompt.md  5-implement-todo-app.implement.prompt.md
plans/1-advanced-todo-features/: data-model.md  plan.md  quickstart.md  research.md
specs/001-todo-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-todo-app/contracts/: task-api.md
specs/1-advanced-todo-features/: spec.md  tasks.md
specs/1-todo-app-enhanced/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: cli.py  main.py  models.py  task_manager.py
tests/: test_cli.py  test_task_manager.py
(+4 files in other folders)
